@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020160216"
-#define public MagickPackageReleaseDate "snapshot-20160216"
+#define public MagickPackageVersionAddendum ".020160221"
+#define public MagickPackageReleaseDate "snapshot-20160221"
