@@ -1,3 +1,8 @@
+2016-02-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* www/Hg.rst: Document the ssh public keys for the server hosting
+	the development Mercurial repository.
+
 2016-02-16  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* coders/xpm.c (ReadXPMImage): Fix SourceForge bug #333
